hphp/hack/test/typecheck/references/refs_in_array/foreach4.php.exp
File "foreach4.php", line 13, characters 33-35:
Cannot take references to array elements. (Typing[4225])
